--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
   "name": "blog-sys-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "repository": "https://github.com/MICAHFANG/blog-sys-backend.git",
   "author": "Micah Fang <micah.fang@outlook.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon ./src/Main.ts"
+  },
   "dependencies": {
-    "express": "^4.18.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "module-alias": "^2.2.2",
+    "mongoose": "^6.3.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.35",
+    "nodemon": "^2.0.16",
     "typescript": "^4.6.4"
+  },
+  "_moduleAliases": {
+    "@": "./src",
+    "routers": "./src/routers"
   }
 }
