--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "log4js": "^6.4.7",
     "module-alias": "^2.2.2",
     "mongoose": "^6.3.4"
   },
