alias: resolve utils path alias

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "_moduleAliases": {
     "@": "./src",
-    "routers": "./src/routers"
+    "routers": "./src/routers",
+    "utils": "./src/utils"
   }
 }
