insert: post router get /page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
       "@/*": ["src/*"],
       "routers/*": ["src/routers/*"],
       "utils/*": ["src/utils/*"],
-      "models/*": ["src/db/models/*"]
+      "models/*": ["src/db/models/*"],
+      "types/*": ["src/types/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
