--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@": "./src",
     "routers": "./src/routers",
     "utils": "./src/utils",
-    "models": "./src/db/models"
+    "models": "./src/db/models",
+    "types": "./src/types"
   }
 }
