--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.1",
     "log4js": "^6.4.7",
     "module-alias": "^2.2.2",
+    "moment": "^2.29.3",
     "mongoose": "^6.3.4"
   },
   "devDependencies": {
