--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,11 +29,12 @@
     // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./" /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
-      "@/*": ["src/*"],
       "routers/*": ["src/routers/*"],
       "utils/*": ["src/utils/*"],
       "models/*": ["src/db/models/*"],
-      "types/*": ["src/types/*"]
+      "types/*": ["src/types/*"],
+      "services/*": ["src/services/*"],
+      "@/*": ["src/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
