--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon ./src/Main.ts"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "log4js": "^6.4.7",
